dist.ini tweaks like MetaJSON or MetaProvides

--- a/dist.ini
+++ b/dist.ini
@@ -21,6 +21,8 @@ keyword = readline
 keyword = shell
 keyword = term
 keyword = terminal
+[MetaJSON]
+[MetaProvides::Package]
 [ModuleBuild]
 mb_class = Test::Run::Builder
 testing_command = runtest
@@ -30,7 +32,7 @@ testing_command = runtest
 -phase = runtime
 Getopt::Long = 2.36
 [MetaResources]
-bugtracker.web = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Games-Solitaire-Verify
+bugtracker.web = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Term-Shell
 bugtracker.mailto = bug-term-shell@rt.cpan.org
 repository.url = git://git@github.com:shlomif/Term-Shell.git
 repository.web = https://github.com/shlomif/Term-Shell
