--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,8 @@
 name    = Term-Shell
 author  = Shlomi Fish <shlomif@cpan.org>
-license = MIT
-copyright_holder = Shlomi Fish
-copyright_year   = 2014
+license = Perl_5
+copyright_holder = Neil Watkiss
+copyright_year   = 2001
 
 [@Filter]
 -bundle = @Basic
