--- a/dist.ini
+++ b/dist.ini
@@ -23,21 +23,22 @@ keyword = term
 keyword = terminal
 [MetaJSON]
 [MetaProvides::Package]
-[ModuleBuild]
-mb_class = Test::Run::Builder
-testing_command = runtest
-[PodSyntaxTests]
-; [PodCoverageTests]
-[Prereqs / Runtime]
--phase = runtime
-Getopt::Long = 2.36
 [MetaResources]
 bugtracker.web = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Term-Shell
 bugtracker.mailto = bug-term-shell@rt.cpan.org
 repository.url = git://git@github.com:shlomif/Term-Shell.git
 repository.web = https://github.com/shlomif/Term-Shell
 repository.type = git
+[ModuleBuild]
+mb_class = Test::Run::Builder
+testing_command = runtest
+; [PodCoverageTests]
+[PodSyntaxTests]
 [PodWeaver]
+[Prereqs / Runtime]
+-phase = runtime
+Getopt::Long = 2.36
+[RewriteVersion]
 [Test::Compile]
 fake_home = 1
 skip = bump-ver
@@ -45,4 +46,3 @@ skip = bump-ver
 [Test::Kwalitee]
 [Test::TrailingSpace]
 filename_regex = (?:(?:\.(?:t|pm|pl|PL|yml|json|arc|vim))|README|Changes|LICENSE)\z
-[VersionFromModule]
