--- a/dist.ini
+++ b/dist.ini
@@ -3,11 +3,20 @@ author  = Shlomi Fish <shlomif@cpan.org>
 license = Perl_5
 copyright_holder = Neil Watkiss
 copyright_year   = 2001
+version = 0.10
 
 [@Filter]
--bundle = @Basic
+-bundle = @SHLOMIF
+-remove = AutoPrereqs
 -remove = MakeMaker
 -remove = License
+-remove = PodCoverageTests
+dist = Term-Shell
+bugtracker_web = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Term-Shell
+bugtracker_mailto = bug-term-shell@rt.cpan.org
+repository_url = git://git@github.com:shlomif/Term-Shell.git
+repository_web = https://github.com/shlomif/Term-Shell
+repository_type = git
 [AutoPrereqs]
 skip = ^Term::InKey$
 skip = ^Term::Screen$
@@ -21,28 +30,6 @@ keyword = readline
 keyword = shell
 keyword = term
 keyword = terminal
-[MetaJSON]
-[MetaProvides::Package]
-[MetaResources]
-bugtracker.web = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Term-Shell
-bugtracker.mailto = bug-term-shell@rt.cpan.org
-repository.url = git://git@github.com:shlomif/Term-Shell.git
-repository.web = https://github.com/shlomif/Term-Shell
-repository.type = git
-[ModuleBuild]
-mb_class = Test::Run::Builder
-testing_command = runtest
-; [PodCoverageTests]
-[PodSyntaxTests]
-[PodWeaver]
 [Prereqs / Runtime]
 -phase = runtime
 Getopt::Long = 2.36
-[RewriteVersion]
-[Test::Compile]
-fake_home = 1
-skip = bump-ver
-[Test::CPAN::Changes]
-[Test::Kwalitee]
-[Test::TrailingSpace]
-filename_regex = (?:(?:\.(?:t|pm|pl|PL|yml|json|arc|vim))|README|Changes|LICENSE)\z
