add tidyall, TestCount, PerlCritic and PerlTidy.
Checks.

--- a/dist.ini
+++ b/dist.ini
@@ -33,3 +33,7 @@ keyword = terminal
 [Prereqs / Runtime]
 -phase = runtime
 Getopt::Long = 2.36
+[Test::Kwalitee]
+[Test::TidyAll]
+; authordep Pod::Weaver::PluginBundle::SHLOMIF
+; authordep Code::TidyAll::Plugin::TestCount
